other pages adjustments complete

--- a/bootstrap-credits.html
+++ b/bootstrap-credits.html
@@ -37,18 +37,19 @@
                 <img src="images/white crown logo.png" height="100px">
                 <div class="creds-rolling">
                     <h4>Writing</h4>
-                    <p>Digital Sex Crimes Korea: Sally Jee, Lauren Alcinador</p>
                     <p>A Doubled Front: Benjamine Mo, Victoria Geh</p>
+                    <p>Digital Sex Crimes Korea: Sally Jee, Lauren Alcinador</p>
+                    <p>I See You: Payton Geller, Arina Karkhanis</p>
                     <p>Sinead & Louisa: Jane Loughman, Elisabeth McLaughlin</p>
                     <br />
                     <h4>Tech</h4>
                     <p>Lauren Alcinador, Rishi Chhapolia, Victoria Geh</p>
                     <br />
                     <h4>Visuals</h4>
-                    <p> name1, name2, name3</p>
+                    <p>Celia Le, Katherine Bibilouri, Elisabeth McLaughlin, Benjamine Mo</p>
                     <br />
                     <h4>Social Media</h4>
-                    <p> name1, name2, name3</p>
+                    <p>Victoria Geh, Jane Loughman, Ana Valeria, Arina Karkhanis</p>
                     <br />
                 </div>
             </div>
