--- a/doubledfrontstory.html
+++ b/doubledfrontstory.html
@@ -115,8 +115,7 @@ open-url:visited
 	<div class="wechat-static"><img src="/doubled-images/iphone1.svg"></div>
 	<div class="wechat-button"><img src="/doubled-images/translate.svg"></div>
 	<div class="wechat-hidden"><img src="/doubled-images/translated.svg"></div>
-  </div>
-  <!-- Once user clicks on translate, the below appears -->
+  </div><!-- Once user clicks on translate, the below appears -->
   <div class="wechat-hidden"> 
   It isn’t so easy to get to you anymore. Have you eaten? Ma, why stay up so late? 
   
@@ -140,8 +139,7 @@ open-url:visited
 </tw-passagedata>
 
 <!-- Passage 1 Stretching-->
-<tw-passagedata pid="2" name="1. Stretching" tags="" position="269,201" size="100,100">
-	
+<tw-passagedata pid="2" name="1. Stretching" tags="" position="269,201" size="100,100">	
 &lt;style&gt;
   tw-story
   {
@@ -158,7 +156,6 @@ open-url:visited
   	color: #F3E9D2;
   }
 &lt;/style&gt;
-
 The darkness, I realize, is a dawn that hasn’t quite settled in yet. My glasses can only do so much now. [[Let&#39;s outdo the sun.-&gt;1.05 Stretch]]
 </tw-passagedata>
 
@@ -194,19 +191,7 @@ I’m on the edge of the bed now, straightening out my limbs and snow-angeling t
 </tw-passagedata>
 
 <!-- Passage 2 Groceries-->
-<tw-passagedata pid="3" name="2. Groceries" tags="" position="678,217" size="100,100">&lt;style&gt;
-li {
-	line-height: 1.2;
-}
-
-a:visited{
-	color: #0D1F2D;
-	text-shadow: 0 0 0 #000;
-}
-
-
-&lt;/style&gt;
-
+<tw-passagedata pid="3" name="2. Groceries" tags="" position="678,217" size="100,100">
 And all is done. I’ve brushed my teeth, washed my face, dressed (and maybe I’ve lied back in bed for just a minute or two). It’s 5:21 AM. Now, to eat:
 
 Something quick, easy. I have that box of cereal and maybe—yes!—some milk left. I’ll need to get more soon. 
@@ -223,7 +208,7 @@ I’ll go to the Chinese mart. Make it out to Main Street (if only the 7 were fa
 
 (link-repeat: &quot;But there’s that other scared too.&quot;)[(t8n:&quot;dissolve&quot;)(show:?links)]
 
-|links)[&lt;span class=&quot;1&quot; &gt;&lt;a href=&quot;https://www.kxan.com/news/crime/report-sams-club-stabbing-suspect-thought-family-was-chinese-infecting-people-with-coronavirus/&quot; target=&quot;_blank&quot;&gt;What about that  Asian American family stabbed somewhere down South—was it Texas?—at a Sam’s Club.&lt;/a&gt;&lt;/span&gt;&lt;span class=&quot;2&quot; &gt;And &lt;a href=&quot;https://www.wpr.org/police-wisconsin-man-harassed-asian-americans-wearing-masks-grocery-store&quot; target=&quot;_blank&quot;&gt;those grocery store shoppers, multiple, in the Midwest harassed for wearing masks while Asian.&lt;/a&gt; I suppose it&#39;s everywhere, really. &lt;/span&gt;&lt;span class=&quot;3&quot; &gt;&lt;a href=&quot;https://www.nbcnews.com/news/asian-america/man-blames-asians-coronavirus-racist-rant-n-y-c-7-n1231444&quot; target=&quot;_blank&quot;&gt;Even here, in NYC, at a 7/11.&lt;/a&gt; Even here.&lt;/span&gt;
+|links)[&lt;b&gt;&lt;a href=&quot;https://www.kxan.com/news/crime/report-sams-club-stabbing-suspect-thought-family-was-chinese-infecting-people-with-coronavirus/&quot; target=&quot;_blank&quot;&gt;What about that  Asian American family stabbed somewhere down South—was it Texas?—at a Sam’s Club.&lt;/a&gt;&lt;/span&gt;&lt;span class=&quot;2&quot; &gt; And &lt;a href=&quot;https://www.wpr.org/police-wisconsin-man-harassed-asian-americans-wearing-masks-grocery-store&quot; target=&quot;_blank&quot;&gt;those grocery store shoppers, multiple, in the Midwest harassed for wearing masks while Asian.&lt;/a&gt; I suppose it&#39;s everywhere, really. &lt;/span&gt;&lt;span class=&quot;3&quot; &gt;&lt;a href=&quot;https://www.nbcnews.com/news/asian-america/man-blames-asians-coronavirus-racist-rant-n-y-c-7-n1231444&quot; target=&quot;_blank&quot;&gt;Even here, in NYC, at a 7/11.&lt;/a&gt; Even here.&lt;/b&gt;
 
 Damn. Some milk. Just some milk. I need to eat. Have you eaten? Ma, have you eaten?
 
@@ -469,9 +454,9 @@ It’s already 7:36pm, and I imagine by now you’ve stored the leftovers away i
 
 Do you have enough food at home? I know you can’t make it too far for groceries with that knee. Do you have enough masks? Hand sanitizer? 
 
-(link-repeat: &quot;How are you?&quot;)[(show: ?p1)]
+<em>How are you?</em>
 
-|p1)[Ma, if I told you that our elders were under attack, what would you say? Would you tell me that it’s always been okay for you, that it would never happen to you just as it hasn’t happened to you before? 
+Ma, if I told you that our elders were under attack, what would you say? Would you tell me that it’s always been okay for you, that it would never happen to you just as it hasn’t happened to you before? 
 
 An old lady was slapped and set on fire in Brooklyn, Ma. (link-repeat: &quot;Why did she deserve this?&quot;)[(open-url: &#39;https://abc7ny.com/woman-set-on-fire-elderly-attack-89-year-old-attacked-bensonhurst-crime/6333749/&#39;)]&lt;span class=&quot;appear&quot; id=&quot;flyer2&quot;&gt; And there were fliers posted in Bay Ridge telling us Chinese to get out. &lt;/span&gt;
 
@@ -479,7 +464,7 @@ You and I; us, this Chinese immigration. They say we are the reason, Ma. When wa
 
 The big news channels don’t really cover this kind of stuff, Ma. The police don’t really care either. Where are you getting your news from? From WeChat? From the Chinese newspapers?
 
-(link-repeat: &quot;Ma, how are you?&quot;)[(show: ?p2)]]
+(link-repeat: &quot;Ma, how are you?&quot;)[(show: ?p2)]
 
 |p2)[I wish I could see you again. As I walk to the subway station, I imagine I can take this line straight to your stop, Ma. But you and I both know we shouldn’t, we can’t. I can’t risk your health like this. So let’s call sometime this weekend—you remember what I taught you about FaceTime, right? 
 
