--- a/team.html
+++ b/team.html
@@ -124,9 +124,9 @@
           <div class="col-md-2 col-sm-5 text-left member">
             <img src="teamPhotos/celia.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Celia Le <br> CC '22</h4>
-            <p>A short sentence or two about yourself, interests etc. <a data-toggle="collapse" href="#member8" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <p>Celia Lê is a junior and an illustrator at Columbia University studying East Asian Studies and Linguistics. <a data-toggle="collapse" href="#member8" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
             <div class="collapse" id="member8">
-              <p>Tets cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
+              <p>An immigrant from Saigon, Vietnam by way of Mississippi, she’s passionate about Indigenous Southeast Asian languages preservation, art, and human rights. Besides being a visual team member at Columbia Int Fic, this summer she served as a translator for The Southeast Asian Diaspora Project (SEAD) in Minneapolis and more. </p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
             <a href="https://www.linkedin.com/in/celiale/"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
@@ -161,14 +161,14 @@
             <h4>Benjamine Mo <br> CC ’23</h4>
             <p>Benjamine Mo is a sophomore at Columbia University pursuing studies in Ethnicity & Race (Asian American Studies). <a data-toggle="collapse" href="#member11" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
             <div class="collapse" id="member11">
-              <p>His interests include creative writing, public health, political advocacy, and social entrepreneurship. He lives in Queens, NYC and has worked closely with Victoria Geh to create <i>A Doubled Front,</i>> an exploration of identity which he is grateful to have been able to share with you, and one which he himself is engaged in.</p>
+              <p>His interests include creative writing, public health, political advocacy, and social entrepreneurship. He lives in Queens, NYC and has worked closely with Victoria Geh to create <i>A Doubled Front,</i> an exploration of identity which he is grateful to have been able to share with you, and one which he himself is engaged in.</p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
             <a href="https://www.linkedin.com/in/benjaminemo/"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
           </div>
           <!-- Giordana-->
           <div class="col-md-2 col-sm-5 text-justify member">
-            <img src="teamPhotos/vic.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <img src="teamPhotos/giordana.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Giordana Serretta Fiorentino <br> CC ‘24</h4>
             <p>Giordana Serretta Fiorentino is a rising Sophomore at Columbia College majoring in Anthropology and Creative Writing. <a data-toggle="collapse" href="#member12" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
             <div class="collapse" id="member12">
