added visuals doubled front

--- a/doubledfrontstory.html
+++ b/doubledfrontstory.html
@@ -169,7 +169,7 @@ The darkness, I realize, is a dawn that hasn’t quite settled in yet. My glasse
 
 The darkness, I realize, is a dawn that hasn’t quite settled in yet. My glasses can only do so much now. &#39;&#39;Let&#39;s outdo the sun.&#39;&#39;
 
-I’m on the edge of the bed now, straightening out my limbs and snow-angeling the mattress. Did these sheets feel this soft last night? My feet are killing me. These half-days in the hospital—all on feet. On edge. I’ll do a little stretching, paddling the air with the heels of my feet, before getting (link-repeat: &quot;ready.&quot;)[(show: ?num)]
+<img src="/doubled-images/lamp.png" alt="Let's Outdo the Sun" class="lamp"> I’m on the edge of the bed now, straightening out my limbs and snow-angeling the mattress. Did these sheets feel this soft last night? My feet are killing me. These half-days in the hospital—all on feet. On edge. I’ll do a little stretching, paddling the air with the heels of my feet, before getting (link-repeat: &quot;ready.&quot;)[(show: ?num)]
 
 |num)[&lt;div id=&quot;count&quot;&gt;(live:1s)[1  (stop:)] (live:2s)[2  (stop:)] (live:3s)[3  (stop:)] (live:4s) [4  (stop:)] (live:5s)[[[5... -&gt;1.1 Meditation]](stop:)]&lt;/div&gt;]
 </tw-passagedata>
@@ -484,9 +484,7 @@ Almost at the station now. I need to decompress, some screeching-rail therapy. I
 I’m on the subway back home now. The car is near empty. I briefly look around: everyone’s either overanalyzing their shoes or pinned to phone screens. There was a furtive glance up to me as I sat down in my scrubs. At this point, it’s something I’ve gotten used to. 
 
 I take out my phone, following suit, and for a moment I’m just another person riding the subway at the end of a long day. Naturally, I scroll through social media feeds. I’m on Facebook when the headline from a post by a fellow nurse at a neighboring New York hospital catches my eye.
-
-&lt;h2&gt;(align: "=><=")[//Nurses and Doctors Speaking Out on Safety Now Risk Their Job//]&lt;/h2&gt;
-
+<img src="doubled-images/news.png" alt="Nurses and Doctors Speaking Out on Safety Now Risk Their Job" class="lamp">
 (link-repeat: &quot;I take a closer look at the article.&quot;)[(open-url: &#39;https://www.nytimes.com/2020/04/09/business/coronavirus-health-workers-speak-out.html&#39;)] Hospitals are threatening employees that expose the shortcomings of institutional policy. I’m familiar: we’d been warned too about the consequences of taking our grievances about our wellbeing, medical practices, to the public. 
 
 This reminds me. I’d heard from a friend about a resident at another NYC hospital who was forced to do rounds in COVID floors with no knowledge or skills to give proper treatment. She wanted to help, of course, but administration expected her, a resident psychiatrist, to understand caring for COVID patients and fully meet their needs.
@@ -495,7 +493,10 @@ I hear my stop on the speaker, though it&#39;s more of a mangled buzzing from do
 </tw-passagedata>
 
 <!--11 Ritual -->
-<tw-passagedata pid="13" name="11. Ritual" tags="" position="682,658" size="100,100">Finally, home again. Now begins the nightly ritual. Mask off. 
+<tw-passagedata pid="13" name="11. Ritual" tags="" position="682,658" size="100,100">|== 
+
+
+	Finally, home again. Now begins the nightly ritual. Mask off. 
 
 (text-style: &quot;expand&quot;)[Breathe] 
 
@@ -506,6 +507,9 @@ It’s 8:37PM. A fridge raid. Do I have enough to throw together a meal?
 Instant noodles. Microwavable rice. Pickled vegetables. Leftover black pepper beef takeout. I’ll make sure to go grocery shopping another day. Yes, another day.
 
 (text-style: &quot;fade-in-out&quot;)[//[[1 New Message-&gt;12. Group Chat]]//]
+
+==|
+<img src="doubled-images/sanitize.png" alt="Cleaning supplies" class="mask-hat">
 </tw-passagedata>
 
 <!-- 12 Group Chat-->
