--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="content">
             <div class="centered-y">
                 <h2>Digital Sex Crimes in South Korea</h2>
-                <p>This is story number three. It's awesome. (Should be over South Korea. This placement might be tricky)<br>
+                <p>As South Korea confronts a crisis of sexual abuse, from widespread spycam crimes to the Nth room, citizens face a world of unjust realities. This piece tells the story of one such person and asks, “What does it mean to be a bystander?”<br>
                 <a href="SLStoryDraft4.html" class="enterButton">enter</a>
                 </p>
             </div>
@@ -81,7 +81,7 @@
         <div class="content">
             <div class="centered-y">
                 <h2>I See You</h2>
-                <p>This is story number three. It's awesome. (Should be over Philly-ish. This placement might be tricky)<br><br>
+                <p>Step into the shoes and gloves of an ICU surgeon. You are Dr. Sabrina Kelly as she prepares for her newly adjusted surgical routine during COVID-19. <br>
                 <img src="images/i-see-you/title-1.gif" alt="A Doubled Front Interactive Fiction" style="width:250px;margin-bottom:10px"><br>
                 <a href="i-see-you-1.html" class="enterButton">enter</a>
                 </p> 
