--- a/credits-2.html
+++ b/credits-2.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- CSS -->
-    <link rel="stylesheet" href="bootstrap-credits.css"> 
+    <link rel="stylesheet" href="credits-2.css"> 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet"> 
@@ -34,19 +34,19 @@
         <div class="row justify-content-center">
             <div class="col text-center overflow-auto">
                 <h1>Project Credits</h1>
-                <img src="images/white crown logo.png" height="100px">
+                <img src="images/white crown logo.png" height="150px">
                 <div class="creds-rolling">
                     <h4>Writing</h4>
-                    <p>A Doubled Front: Benjamine Mo, Victoria Geh</p>
-                    <p>Digital Sex Crimes Korea: Sally Jee, Lauren Alcinador</p>
-                    <p>I See You: Payton Geller, Arina Karkhanis</p>
-                    <p>Sinead & Louisa: Jane Loughman, Elisabeth McLaughlin</p>
+                    <p><b>A Doubled Front</b>: Benjamine Mo, Victoria Geh</p>
+                    <p><b>Digital Sex Crimes Korea</b>: Sally Jee, Lauren Alcindor</p>
+                    <p><b>I See You</b>: Payton Geller, Arina Karkhanis</p>
+                    <p><b>Sinead & Louisa</b>: Jane Loughman, Elisabeth McLaughlin</p>
                     <br />
                     <h4>Tech</h4>
-                    <p>Lauren Alcinador, Rishi Chhapolia, Victoria Geh</p>
+                    <p>Lauren Alcindor, Rishi Chhapolia, Victoria Geh</p>
                     <br />
                     <h4>Visuals</h4>
-                    <p>Celia Le, Katherine Bibilouri, Elisabeth McLaughlin, Benjamine Mo</p>
+                    <p>Celia Lê, Katherine Bibilouri, Elisabeth McLaughlin, Benjamine Mo</p>
                     <br />
                     <h4>Social Media</h4>
                     <p>Victoria Geh, Jane Loughman, Ana Valeria, Arina Karkhanis</p>
