--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <!-- Current CSS -->
-        <link rel="stylesheet" href="styles.css"/>
+        <link rel="stylesheet" href="style.css"/>
         <!-- Logo link -->
         <link rel="shortcut icon" href="images/white-logo.svg"/>
         <!-- Fonts -->
@@ -32,7 +32,6 @@
 <body>
            <body id="home-body">
 
-<!--   Code for intro splash screen, commented out
 
         <div class="container-fluid">
           <div class="splash">
@@ -40,7 +39,6 @@
             <h1 class="splash-txt-1">what IF</h1>
             <p class="splash-txt-2">click to continue</p>
           </div>
-            --> 
             
 <div class="distribution-map">
     <!-- This was broken for a while because image hosts are annoying, so now it's a data uri. Sorry :( -->
@@ -50,8 +48,11 @@
         <div class="content">
             <div class="centered-y">
                 <h2>A Doubled Front</h2>
-                <p>A day-in-the-life of an East Asian American healthcare worker reconciling duty and selfless service with questions of identity and belonging in the wake of surging anti-Asian hate. <br>
                 <img src="doubled-images/cover.gif" alt="A Doubled Front Interactive Fiction" style="width:350px;margin-top:-30px"><br>
+                <p>A day-in-the-life of an East Asian American healthcare worker reconciling duty and selfless service with questions of identity and belonging in the wake of surging anti-Asian hate. <br><br>
+                    <b>Writers:</b> Benjamine Mo and Victoria Geh<br>
+                    <b>Tech:</b> Victoria Geh<br>
+                    <b>Visuals:</b> Benjamine Mo<br><br>
                 <a href="doubledfront.html" class="enterButton">enter</a>
               </p>
             </div>
@@ -61,7 +62,10 @@
         <div class="content">
             <div class="centered-y">
                 <h2>Sinead & Louisa</h2>
-                <p>This is story number four. It's awesome. (This should be over Ireland, though the story also occurs in New Orleans)
+                <p>This is story number four. It's awesome. (This should be over Ireland, though the story also occurs in New Orleans) <br><br>
+                    <b>Writers:</b> Jane Loughman and Elisabeth McLaughlin<br>
+                    <b>Tech:</b> Rishi Chhapolia<br>
+                    <b>Visuals:</b> Elisabeth McLaughlin<br>
                 <br><a href="sinead-page-1.html" class="enterButton">enter</a>
                 </p>
             </div>
@@ -71,7 +75,11 @@
         <div class="content">
             <div class="centered-y">
                 <h2>Digital Sex Crimes in South Korea</h2>
-                <p>As South Korea confronts a crisis of sexual abuse, from widespread spycam crimes to the Nth room, citizens face a world of unjust realities. This piece tells the story of one such person and asks, “What does it mean to be a bystander?”<br>
+                <p>As South Korea confronts a crisis of sexual abuse, from widespread spycam crimes to the Nth room, citizens face a world of unjust realities. This piece tells the story of one such person and asks, “What does it mean to be a bystander?”<br><br>
+                    <b>Writers:</b> Sally Jee and Lauren Alcindor<br>
+                    <b>Tech:</b> Lauren Alcindor<br>
+                    <b>Visuals:</b> Katherine Bibilouri<br><br>
+                    <b><u>Estimated reading time:</u></b> 30 mins <br><br>
                 <a href="SLStoryDraft4.html" class="enterButton">enter</a>
                 </p>
             </div>
@@ -81,8 +89,13 @@
         <div class="content">
             <div class="centered-y">
                 <h2>I See You</h2>
-                <p>Step into the shoes and gloves of an ICU surgeon. You are Dr. Sabrina Kelly as she prepares for her newly adjusted surgical routine during COVID-19. <br>
-                <img src="images/i-see-you/title-1.gif" alt="A Doubled Front Interactive Fiction" style="width:250px;margin-bottom:10px"><br>
+                <img src="images/i-see-you/title-1.gif" alt="A Doubled Front Interactive Fiction" style="width:200px;margin-bottom:10px"><br>
+                <p>Step into the shoes and gloves of an ICU surgeon. You are Dr. Sabrina Kelly as she prepares for her newly adjusted surgical routine during COVID-19. <br><br>
+                    <b>Writers:</b> Payton Geller and Arina Karkhanis<br>
+                    <b>Tech:</b> Rishi Chhapolia<br>
+                    <b>Visuals:</b> Celia Lê<br><br>
+                    <b><u>Estimated reading time:</u></b> 5-10 mins <br><br>
+                
                 <a href="i-see-you-1.html" class="enterButton">enter</a>
                 </p> 
             </div>
