--- a/story-template.html
+++ b/story-template.html
@@ -11,7 +11,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" 
         crossorigin="anonymous">
         <!--css stylesheet link-->
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="styles.css"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>What IF: Story Template</title>
         <!-- Global site tag (gtag.js) - Google Analytics -->
