Updated the fada (é) for all instances of Sinéad

--- a/credits-2.html
+++ b/credits-2.html
@@ -40,7 +40,7 @@
                     <p><b>A Doubled Front</b>: Benjamine Mo, Victoria Geh</p>
                     <p><b>Digital Sex Crimes Korea</b>: Sally Jee, Lauren Alcindor</p>
                     <p><b>I See You</b>: Payton Geller, Arina Karkhanis</p>
-                    <p><b>Sinead & Louisa</b>: Jane Loughman, Elisabeth McLaughlin</p>
+                    <p><b>Sinéad & Louisa</b>: Jane Loughman, Elisabeth McLaughlin</p>
                     <br />
                     <h4>Tech</h4>
                     <p>Lauren Alcindor, Rishi Chhapolia, Victoria Geh</p>
