--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <button class="map-point" style="top:30%;left:45%">
         <div class="content">
             <div class="centered-y">
-                <h2>Sinead & Louisa</h2>
+                <h2>Sinéad & Louisa</h2>
                 <p>This is story number four. It's awesome. (This should be over Ireland, though the story also occurs in New Orleans) <br><br>
                     <b>Writers:</b> Jane Loughman and Elisabeth McLaughlin<br>
                     <b>Tech:</b> Rishi Chhapolia<br>
