--- a/sinead-page-1.html
+++ b/sinead-page-1.html
@@ -35,7 +35,7 @@
         </header> -->
 
             <div class="sinead-splash">
-                <h1 class="sinead-txt-1">Sinead & Louisa</h1>
+                <h1 class="sinead-txt-1">Sinéad & Louisa</h1>
                 <p class="sinead-txt-2">Written by: <br> Jane Loughman and Elisabeth McLaughlin</p>
                 <p class="sinead-txt-3">click to continue</p>
                 <script>
