--- a/sinead-story-1.html
+++ b/sinead-story-1.html
@@ -499,7 +499,7 @@ Write soon,&lt;br /&gt;
 		  window.top.postMessage(&#39;bg5&#39;, &#39;*&#39;);	
 	  });
 &lt;/script&gt;]
-}</tw-passagedata><tw-passagedata pid="5" name="Email5" tags="Sinead-Email" position="576,625" size="100,100">{
+}</tw-passagedata><tw-passagedata pid="5" name="Email5" tags="Sinead-Email" position="577,625" size="100,100">{
   &lt;script&gt;
 	window.top.postMessage(&#39;email5&#39;, &#39;*&#39;);
 	console.log(&quot;email clicker 5 executed!&quot;); 
@@ -1210,7 +1210,7 @@ Maybe we should FaceTime one of these days. Soon? &lt;br /&gt;&lt;br /&gt;
 (event: when time &gt; 2s)[(t8n: &quot;dissolve&quot;)(show: ?p2)]
 
 |p1)[Thank you for playing 
-&lt;b&gt;&lt;i&gt;Sinead &amp; Louisa.&lt;/i&gt;&lt;/b&gt;]
+&lt;b&gt;&lt;i&gt;Sinéad &amp; Louisa.&lt;/i&gt;&lt;/b&gt;]
 }
 
 
