--- a/team.html
+++ b/team.html
@@ -69,7 +69,7 @@
             <h4>Rishi Chhapolia <br> CC ‘22</h4>
             <p>Sitting idly in home quarantine in Bangalore, India, Rishi saw Columbia Int Fic as the perfect opportunity to create at the intersection of art and technology. <a data-toggle="collapse" href="#member3" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
             <div class="collapse" id="member3">
-              <p>As a member of the tech team, he helped build the project website and interactive elements for <i>Sinead and Louisa </i>and <i>I See You</i>. At Columbia, he studies philosophy, directs theater and short films, dances with CU Raas, and eats a LOT of chicken. Check out his <a href="https://rishichhapolia.wixsite.com/rishic">website</a> and creative portfolio <a href="https://www.instagram.com/rchpol/">Instagram!</a></p>
+              <p>As a member of the tech team, he helped build the project website and interactive elements for <i>Sinéad and Louisa </i>and <i>I See You</i>. At Columbia, he studies philosophy, directs theater and short films, dances with CU Raas, and eats a LOT of chicken. Check out his <a href="https://rishichhapolia.wixsite.com/rishic">website</a> and creative portfolio <a href="https://www.instagram.com/rchpol/">Instagram!</a></p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
             <a href="https://www.linkedin.com/in/rishichhapolia/"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
@@ -139,7 +139,7 @@
             <h4>Jane Loughman <br> GS ‘22</h4>
             <p>Jane is a junior in the Dual BA Program between Columbia University and Trinity College Dublin, majoring in English. <a data-toggle="collapse" href="#member9" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
             <div class="collapse" id="member9">
-              <p>She is from Bray, a town about 30 minutes from Dublin in Ireland. She wrote the story <i>Sinead and Louisa</i> along with Elisabeth McLaughlin. She is the GCC liaison, and on the writing and social media team. She has written for Trinity News and <a href="www.youtube.com/queenofquirk">vlogs</a> and <a href="www.queenofquirk.com">blogs</a> in her spare time. </p>
+              <p>She is from Bray, a town about 30 minutes from Dublin in Ireland. She wrote the story <i>Sinéad and Louisa</i> along with Elisabeth McLaughlin. She is the GCC liaison, and on the writing and social media team. She has written for Trinity News and <a href="www.youtube.com/queenofquirk">vlogs</a> and <a href="www.queenofquirk.com">blogs</a> in her spare time. </p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
             <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
