--- a/credits.html
+++ b/credits.html
@@ -47,7 +47,7 @@
                 </div>
                 <!-- prompt space to credits-->
             </section>
-            <a class="space-bar" id="firstPage" href="bootstrap-credits.html">continue</a>
+            <a class="space-bar" id="firstPage" href="credits-2.html">continue</a>
                         
             <script type="text/javascript">
                 $(document).ready(function(){
