--- a/doubledfrontstory.html
+++ b/doubledfrontstory.html
@@ -418,7 +418,9 @@ Now, I need to devote myself to my patients. They deserve the best I can provide
 	
 	(link-repeat: &quot;I held that phone for her, &quot;)[(show:?p2)]]|p2)[poking my head to its side to make sure she was in frame. And I saw her family: her son, maybe, daughters; a grandchild, too young to really know. They had all gathered together for a last call, a virtual visit, with her. My arm was sore, but the soreness became a stiffness that made it easier to prop up, not too close, not too far. It was that innate refusal to lower my arm that left me holding the phone there for a moment after the call ended, after they had said their goodbyes, and I realized that I hadn’t really said goodbye yet. Today, it’s already too late.
 	
-	(link-repeat: &quot;I’ll check in &quot;)[(show: ?p3)]] |p3)[with my team in a bit, and we’ll make the tough decisions: who gets what, who gets to live. I need to stay on my feet, on my feet, on my feet. [[I’m ready, and I’m scared.-&gt;10. Nighttime]]
+	(link-repeat: &quot;I’ll check in &quot;)[(show: ?p3)]] |p3)[with my team in a bit, and we’ll make the tough decisions: who gets what, who gets to live. I need to stay on my feet, on my feet, on my feet. 
+	
+	[[I’m ready, and I’m scared.-&gt;10. Nighttime]]
 	
 	//For a more in-depth and accurate understanding of the experiences of frontline workers in hospitals during the COVID-19 pandemic, please refer to these (link-repeat: &quot;first-hand testimonials.&quot;)[(open-url: &quot;doubledvideos.html&quot;)] We respect the authorial integrity presented by these accounts and humbly defer to them, urging you to read through and then return to our narrative when ready.//]
 </tw-passagedata>
@@ -515,7 +517,7 @@ Instant noodles. Microwavable rice. Pickled vegetables. Leftover black pepper be
 <!-- 12 Group Chat-->
 <tw-passagedata pid="14" name="12. Group Chat" tags="" position="844,658" size="100,100">Oh wow. Someone decided to revive the old college group chat. When was the last time anyone sent a message in there? I guess this is a nice surprise, I haven’t talked to them in a while. I haven’t talked to many people, really, in a while. There’s a strange twist in my stomach–a nervousness in dealing with something that used to be normal, but somehow now is anything but. 
 
-<div><img class="imessage" src="/doubled-images/imessage.gif"><a href="https://www.instagram.com/litarnes" class="imessage">Icon Credit</a></div>
+<div><img class="imessage" src="/doubled-images/imessage.gif"><a href="https://www.picuki.com/profile/litarnes" class="imessage">Icon Credit @litarnes</a></div>
 
 Just seeing their messages brings their voices to life. I feel nostalgic about those college years, which, in reality, were only some years ago. I want to respond with a yes. I want to see my friends. Should I?
 
