--- a/doubledfrontstory.html
+++ b/doubledfrontstory.html
@@ -279,6 +279,7 @@ Mask-on (link-repeat: &quot;(the right way, of course):&quot;)[(open-url: &#39;h
 		font-size:25px;
 	}
 &lt;/style&gt;
+<img src="doubled-images/sidewalk.png" class="main-street">
 
 It’s a stubborn kind of brisk out today. The foggy warmth from the mask (I usually despise it) is comforting. It’s a reminder, really, that I am here, that I am breathing. Thank God.
 
@@ -461,12 +462,17 @@ Do you have enough food at home? I know you can’t make it too far for grocerie
 Ma, if I told you that our elders were under attack, what would you say? Would you tell me that it’s always been okay for you, that it would never happen to you just as it hasn’t happened to you before? 
 
 An old lady was slapped and set on fire in Brooklyn, Ma. (link-repeat: &quot;Why did she deserve this?&quot;)[(open-url: &#39;https://abc7ny.com/woman-set-on-fire-elderly-attack-89-year-old-attacked-bensonhurst-crime/6333749/&#39;)]&lt;span class=&quot;appear&quot; id=&quot;flyer2&quot;&gt; And there were fliers posted in Bay Ridge telling us Chinese to get out. &lt;/span&gt;
+|==
+<img src="doubled-images/mom.png" class="subway">
+==|
+
 
 You and I; us, this Chinese immigration. They say we are the reason, Ma. When was the last time you took me back to China? It must have been when I was 5 or 6. Listen to my broken Mandarin, Ma, and you’d know. And now, I am fighting this virus. If they say I am the reason for the virus, is my frontline fight just a battle against myself?
 
 The big news channels don’t really cover this kind of stuff, Ma. The police don’t really care either. Where are you getting your news from? From WeChat? From the Chinese newspapers?
 
-(link-repeat: &quot;Ma, how are you?&quot;)[(show: ?p2)]
+|==|
+(align:"=><=")+(link-repeat: &quot;Ma, how are you?&quot;)[(show: ?p2)]
 
 |p2)[I wish I could see you again. As I walk to the subway station, I imagine I can take this line straight to your stop, Ma. But you and I both know we shouldn’t, we can’t. I can’t risk your health like this. So let’s call sometime this weekend—you remember what I taught you about FaceTime, right? 
 
