--- a/doubledfrontstory.html
+++ b/doubledfrontstory.html
@@ -176,12 +176,16 @@ The darkness, I realize, is a dawn that hasn’t quite settled in yet. My glasse
 
 <!-- 1.1 Meditation-->
 <tw-passagedata pid="17" name="1.1 Meditation" tags="" position="530,215" size="100,100">
+|===
+<img src="doubled-images/yawn.png" style="width:100%;margin-left:15%">
+=|||
+
 	As I stretch, I am suddenly conscious of my breath, the inhale, pause, exhale. I’m meditating, I realize, and I savor it. These moments before the chaos of the day—remembering myself, feeling.
 
 	So, so much loss. For a moment, the calls of Code 3s ring. They ring in my ears, in my head. They //become// time, marking every half hour or so: death tracks my day. 
 
 	Breathe. This isn't really meditating, is it? I'm supposed to be thoughtless, at peace, or something like that. Okay. At peace...
-
+|==|
 	For now, it’s just me. It is quiet. I’m stretching out and reminding me of this place I occupy, this body I inherit, and I am grateful for it. I want to be there to care for my patients, so I make sure I’m ready to do so.
 
 	And what this means is that right now I make a promise. I promise to provide the care that my patients deserve. Maybe this means that I have to restrain myself, lessen the emotional connection I feel with each of them. For the sake of efficiency, for the sake of being the best professional I can be, I must distance myself from all that loss, even the possibility of it. 
@@ -542,7 +546,7 @@ The journey there would be too much, [[anyway.-&gt;13. Reflection]]
 Here I am. Sitting here. Another day in this pandemic has passed. Today, lives were lost, lives were saved. I’m here, and I’m ready. Tomorrow I’ll head to the hospital, get ready, and fight the good fight. I’ll be more mindful at 7pm and listen out for that clap.
 
 We’re stronger together. And we are–no matter what, we are here and we are here to stay. The strength of NYC has always been its diversity. We’re tested, but we will emerge stronger, ever more present and aware of how and why we belong. 
-
+<img src="doubled-images/nyc.png" class="nyc">
 New York tough. 
 坚强的纽约 
 //jiān qiáng de niǔ yuē//. 
