--- a/doubledfront.html
+++ b/doubledfront.html
@@ -12,6 +12,15 @@
         <link rel="stylesheet" href="doubled.css">
         <!-- Logo link -->
         <link rel="shortcut icon" href="images/white-logo.svg"/>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176737183-2"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-176737183-1');
+        </script>
     </head>
     <body id="story-body">
 
