--- a/doubledvideos.html
+++ b/doubledvideos.html
@@ -38,6 +38,16 @@
         }
     </style>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176737183-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-176737183-1');
+    </script>
+
     <title>Hello, world!</title>
   </head>
   <body>
