COMMIT THIS SHIT

--- a/doubledvideos.html
+++ b/doubledvideos.html
@@ -48,7 +48,7 @@
         gtag('config', 'UA-176737183-1');
     </script>
 
-    <title>Hello, world!</title>
+    <title>A Doubled Front</title>
   </head>
   <body>
     <div class="container">
