--- a/doubledfrontstory.html
+++ b/doubledfrontstory.html
@@ -427,7 +427,7 @@ Now, I need to devote myself to my patients. They deserve the best I can provide
 	
 	[[I’m ready, and I’m scared.-&gt;10. Nighttime]]
 	
-	//For a more in-depth and accurate understanding of the experiences of frontline workers in hospitals during the COVID-19 pandemic, please refer to these (link-repeat: &quot;first-hand testimonials.&quot;)[(open-url: &quot;doubledvideos.html&quot;)] We respect the authorial integrity presented by these accounts and humbly defer to them, urging you to read through and then return to our narrative when ready.//]
+	<span style="font-size:16px;line-height:16px">//For a more in-depth and accurate understanding of the experiences of frontline workers in hospitals during the COVID-19 pandemic, please refer to these (link-repeat: &quot;first-hand testimonials.&quot;)[(open-url: &quot;doubledvideos.html&quot;)] We respect the authorial integrity presented by these accounts and humbly defer to them, urging you to read through and then return to our narrative when ready.//]</span>
 </tw-passagedata>
 
 <!-- 10. Nighttime-->
