--- a/doubledfrontstory.html
+++ b/doubledfrontstory.html
@@ -22,7 +22,7 @@
 
 tw-story {
   font-family: 'Maven Pro', sans-serif;
-  font-size: 20px;
+  font-size: 1.25em;
   background-color: #F3E9D2;
 }
  
@@ -176,9 +176,7 @@ The darkness, I realize, is a dawn that hasn’t quite settled in yet. My glasse
 
 <!-- 1.1 Meditation-->
 <tw-passagedata pid="17" name="1.1 Meditation" tags="" position="530,215" size="100,100">
-|===
-<img src="doubled-images/yawn.png" style="width:100%;margin-left:15%">
-=|||
+<img src="doubled-images/yawn.png" class="grocery">
 
 	As I stretch, I am suddenly conscious of my breath, the inhale, pause, exhale. I’m meditating, I realize, and I savor it. These moments before the chaos of the day—remembering myself, feeling.
 
@@ -245,13 +243,16 @@ I’m reaching for the mask and I subtly flinch, the kind that arrests your brea
 No. It’s not its foreignness to me, but its foreignness to others. To be visibly East Asian and wear a mask is to dig into the peril I embody, to wear it like an affront to those who see me, this Oriental threat. (link-repeat: &quot;Somehow, I become a threat.&quot;)[(open-url: &#39;https://www.straitstimes.com/world/united-states/fake-flyers-and-face-mask-fear-california-fights-coronavirus-discrimination&#39;)]
 
 I wonder if I should wear sunglasses today. It’s not slated to be that sunny, to be honest, but a part of me—I’m slightly ashamed to admit—is scared, wants to hide. To hide perhaps the most visibly East Asian, one of the most ridiculed, features of my appearance. Maybe a hat too: my black hair is distinctive, I suppose. To reduce the area my body encompasses becomes a statistical game. Today, will I be discriminated against for the visibility of my identity? 
+
 ==|
 <img src="/doubled-images/mask-hat.png" alt="Mask and hat" class="mask-hat">
-|==|
 
+|==|
 Agh. I know better. I know, I know. And I can’t be late.
 
 Mask-on (link-repeat: &quot;(the right way, of course):&quot;)[(open-url: &#39;https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/diy-cloth-face-coverings.html&#39;)] [[let’s go.-&gt;5. Walking]]]
+
+
 
 <script>
 	/* Replace 1 with 0, replace text*/
@@ -573,7 +574,7 @@ Almost midnight now, [[but the sky still glows.-&gt;Fin.]]
 
 	The body of referenced articles and resources does not represent the wealth of information regarding healthcare work during the pandemic and current anti-Asian racism in its entirety. We recognize that many incidents of Anti-Asian discrimination and hate are unreported due to fears of retaliation, gaslighting, and/or law enforcement and media apathy. We hope that what we have gathered here can serve as a foundation for further research and insight into the true scope of these issues.
 
-	We also do not intend to represent the experiences of all Asian American healthcare workers in any capacity. Our story focuses on the day-in-the-life of one fictionalized individual experiencing a reality based on reports and first-hand testimonials. In this way, the character you meet is an amalgamation of many various accounts of the Asian American experience, specifically the East Asian American experience during this pandemic. We also recognize that the term &quot;Asian American&quot; is vastly broad, and that the impacts of COVID-19 have been disproportionately manifested amongst various subgroups within the monolithic grouping &quot;Asian American.&quot; 
+	We also do not intend to represent the experiences of all Asian American healthcare workers in any capacity. Our story focuses on the day-in-the-life of one fictionalized individual experiencing a reality based on reports and first-hand testimonials. In this way, the character you meet is an amalgamation of many various accounts of the Asian American experience, specifically the Chinese American experience during this pandemic. We also recognize that the term &quot;Asian American&quot; is vastly broad, and that the impacts of COVID-19 have been disproportionately manifested amongst various subgroups within the monolithic grouping &quot;Asian American.&quot; 
 
 	[[Please read through and engage with the resources we’ve provided here.-&gt;Resources Page]]
 </tw-passagedata>
@@ -601,6 +602,8 @@ Almost midnight now, [[but the sky still glows.-&gt;Fin.]]
 	(link-repeat: &quot;NYC-Based Asian American Organizations&quot;)[(open-url: &quot;http://www.awib.org/index.cfm?fuseaction=page.viewPage&amp;pageID=859&amp;nodeID=1&quot;)]	
 	(link-repeat: &quot;Asian American Advocacy Groups Around the United States&quot;)[(open-url: &quot;http://www.awib.org/index.cfm?fuseaction=page.viewpage&amp;pageid=816&quot;)]
 
+	(link-repeat: &quot;For Information Regarding the COVID-19 Pandemic&quot;)[(open-url: &quot;https://www.columbiasciencereview.com/covid-19-public-hub.html&quot;)]
+	We also urge readers to engage with the story “I See You” featured on our website which provides a glimpse into the professional life of a surgeon during the pandemic.
 
 
 	(align:"=><=")[<a class="end" href="credits.html">Fin.</a>]
