--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="centered-y">
                 <h2>A Doubled Front</h2>
                 <img src="doubled-images/cover.gif" alt="A Doubled Front Interactive Fiction" style="width:350px;margin-top:-30px"><br>
-                <p>A day-in-the-life of an East Asian American healthcare worker reconciling duty and selfless service with questions of identity and belonging in the wake of surging anti-Asian hate. <br><br>
+                <p>A day-in-the-life of an Chinese American healthcare worker reconciling duty and selfless service with questions of identity and belonging in the wake of surging anti-Asian hate. <br><br>
                     <b>Writers:</b> Benjamine Mo and Victoria Geh<br>
                     <b>Tech:</b> Victoria Geh<br>
                     <b>Visuals:</b> Benjamine Mo<br><br>
