--- a/doubledfrontstory.html
+++ b/doubledfrontstory.html
@@ -451,7 +451,8 @@ I think I heard the 7pm clap today. Maybe. And even if I didn’t, I know it was
 ==||
 
 
-I’m on my way to the station now, heading home. I notice someone a block down, rummaging through the trash cans, looking for bottles. Reminds me of home: the ladies with their pushcarts and sunhats, looking for recyclables. Working so hard to make a living. 辛苦 &lt;i&gt;xīn kǔ.&lt;/i&gt; The bitterness of a heart that’s giving everything it’s got for something greater, something better.
+I’m on my way to the station now, heading home. I notice someone a block down, rummaging through the trash cans, looking for bottles. Reminds me of home: the ladies with their pushcarts and sunhats, looking for recyclables. Working so hard to make a living. 
+辛苦 &lt;i&gt;xīn kǔ.&lt;/i&gt; The bitterness of a heart that’s giving everything it’s got for something greater, something better.
 
 [[I’ll text you later, okay?-&gt;10.1 Our Elders]]
 </tw-passagedata>
